applications/services/pds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pds
  namespace: pds
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pds
  ports:
    - name: http
      port: 3000
      targetPort: 3000
